# feishu-md-tables

./: .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  card_builder.py  interceptor.py  parser.py  plugin.yaml  pyproject.toml
tests/: test_interceptor_e2e.py  test_multi_card_send.py  test_parser_and_card.py  test_split_groups.py
